fixed introdaction not collapsing on profile

--- a/src/assets/styles/basics/_base.scss
+++ b/src/assets/styles/basics/_base.scss
@@ -17,6 +17,7 @@ body {
     font-size: rem(16px);
     margin: 0;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+    overflow-x: hidden;
     
     // max-width: 1024px;
     // margin: auto;
